--- a/index.html
+++ b/index.html
@@ -11,6 +11,55 @@
     
     <div class="main-container">
 
+        <div class="calc">
+
+            <h1 class="calc__title">Calculator</h1>
+
+            <div class="calc__display">
+
+                <div class="calc__history">
+                    <div class="history_item">500 - 1600</div>
+                    <div class="history_item">500 - 1600</div>
+                    <div class="history_item">500 - 1600</div>
+                    <div class="history_item">500 - 1600</div>
+
+                </div>
+                <input class="calc__screen" type="text" value="-1100" disabled>
+
+            </div>
+            <!-- /.calc__display -->
+
+            <div class="calc__control">
+
+                <button class="btn clear" type="button">C</button>
+                <button class="btn operator" type="button">+/-</button>
+                <button class="btn operator" type="button">%</button>
+                <button class="btn operator" type="button">/</button>
+
+                <button class="btn" type="button">1</button>
+                <button class="btn" type="button">2</button>
+                <button class="btn" type="button">3</button>
+                <button class="btn operator" type="button">*</button>
+
+                <button class="btn" type="button">4</button>
+                <button class="btn" type="button">5</button>
+                <button class="btn" type="button">6</button>
+                <button class="btn operator" type="button">+</button>
+
+                <button class="btn" type="button">7</button>
+                <button class="btn" type="button">8</button>
+                <button class="btn" type="button">9</button>
+                <button class="btn operator" type="button">-</button>
+
+                <button class="btn" type="button">.</button>
+                <button class="btn" type="button">0</button>
+                <button class="btn result" type="button">=</button>
+
+            </div>
+            <!-- /.calc__control -->
+
+        </div>
+        <!-- /.calc -->
     </div>
 
     <script src="js/script.js"></script>
