--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -21,8 +24,6 @@
                     <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
-                    <div class="history_item">500 - 1600</div>
-
                 </div>
                 <input class="calc__screen" type="text" value="-1100" disabled>
 
@@ -32,27 +33,27 @@
             <div class="calc__control">
 
                 <button class="btn clear" type="button">C</button>
-                <button class="btn operator" type="button">+/-</button>
+                <button class="btn operator sign" type="button">+/-</button>
                 <button class="btn operator" type="button">%</button>
                 <button class="btn operator" type="button">/</button>
 
-                <button class="btn" type="button">1</button>
-                <button class="btn" type="button">2</button>
-                <button class="btn" type="button">3</button>
+                <button class="btn num" type="button">1</button>
+                <button class="btn num" type="button">2</button>
+                <button class="btn num" type="button">3</button>
                 <button class="btn operator" type="button">*</button>
 
-                <button class="btn" type="button">4</button>
-                <button class="btn" type="button">5</button>
-                <button class="btn" type="button">6</button>
+                <button class="btn num" type="button">4</button>
+                <button class="btn num" type="button">5</button>
+                <button class="btn num" type="button">6</button>
                 <button class="btn operator" type="button">+</button>
 
-                <button class="btn" type="button">7</button>
-                <button class="btn" type="button">8</button>
-                <button class="btn" type="button">9</button>
+                <button class="btn num" type="button">7</button>
+                <button class="btn num" type="button">8</button>
+                <button class="btn num" type="button">9</button>
                 <button class="btn operator" type="button">-</button>
 
-                <button class="btn" type="button">.</button>
-                <button class="btn" type="button">0</button>
+                <button class="btn point" type="button">.</button>
+                <button class="btn num" type="button">0</button>
                 <button class="btn result" type="button">=</button>
 
             </div>
