--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <div class="calc__display">
 
                 <div class="calc__history">
+                    <!-- <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
-                    <div class="history_item">500 - 1600</div>
-                    <div class="history_item">500 - 1600</div>
+                    <div class="history_item">500 - 1600</div> -->
 
                 </div>
-                <input class="calc__screen" type="text" value="-1100" disabled>
+                <input class="calc__screen" value=""  type="text" disabled>
 
             </div>
             <!-- /.calc__display -->
@@ -36,23 +36,23 @@
                 <button class="btn operator" type="button">%</button>
                 <button class="btn operator" type="button">/</button>
 
-                <button class="btn" type="button">1</button>
-                <button class="btn" type="button">2</button>
-                <button class="btn" type="button">3</button>
+                <button class="btn num" type="button">1</button>
+                <button class="btn num" type="button">2</button>
+                <button class="btn num" type="button">3</button>
                 <button class="btn operator" type="button">*</button>
 
-                <button class="btn" type="button">4</button>
-                <button class="btn" type="button">5</button>
-                <button class="btn" type="button">6</button>
+                <button class="btn num" type="button">4</button>
+                <button class="btn num" type="button">5</button>
+                <button class="btn num" type="button">6</button>
                 <button class="btn operator" type="button">+</button>
 
-                <button class="btn" type="button">7</button>
-                <button class="btn" type="button">8</button>
-                <button class="btn" type="button">9</button>
+                <button class="btn num" type="button">7</button>
+                <button class="btn num" type="button">8</button>
+                <button class="btn num" type="button">9</button>
                 <button class="btn operator" type="button">-</button>
 
-                <button class="btn" type="button">.</button>
-                <button class="btn" type="button">0</button>
+                <button class="btn point" type="button">.</button>
+                <button class="btn num" type="button">0</button>
                 <button class="btn result" type="button">=</button>
 
             </div>
@@ -62,7 +62,7 @@
         <!-- /.calc -->
     </div>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 
 </body>
 </html>
