added history and anim-gradient

--- a/index.html
+++ b/index.html
@@ -20,17 +20,7 @@
 
             <div class="calc__display">
 
-                <div class="calc__history">
-                    <!-- <div class="history_item">500 - 1600</div>
-                    <div class="history_item">500 - 1600</div>
-                    <div class="history_item">500 - 1600</div>
-<<<<<<< HEAD
-                    <div class="history_item">500 - 1600</div> -->
-
-=======
-                    <div class="history_item">500 - 1600</div>
->>>>>>> ad373f73445b6d65d4130d22fb9de0c2b8b1393f
-                </div>
+                <div class="calc__history"></div>
                 <input class="calc__screen" value=""  type="text" disabled>
 
             </div>
@@ -68,6 +58,7 @@
         </div>
         <!-- /.calc -->
     </div>
+    <!-- /.main-container -->
 
     <script type="module" src="js/script.js"></script>
 
