class for calc completed

--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
                     <!-- <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
                     <div class="history_item">500 - 1600</div>
-<<<<<<< HEAD
                     <div class="history_item">500 - 1600</div> -->
 
-=======
-                    <div class="history_item">500 - 1600</div>
->>>>>>> ad373f73445b6d65d4130d22fb9de0c2b8b1393f
                 </div>
-                <input class="calc__screen" value=""  type="text" disabled>
+                <input class="calc__screen" value="0"  type="text" disabled>
 
             </div>
             <!-- /.calc__display -->
@@ -40,7 +36,7 @@
 
                 <button class="btn clear" type="button">C</button>
                 <button class="btn operator sign" type="button">+/-</button>
-                <button class="btn operator" type="button">%</button>
+                <button class="btn operator percent" type="button">%</button>
                 <button class="btn operator" type="button">/</button>
 
                 <button class="btn num" type="button">1</button>
